--- a/css/main.css
+++ b/css/main.css
@@ -1,42 +1,136 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 html {
-    font-size: 62.5%;
+  font-size: 62.5%;
 }
 
 body {
-    background: #DAE0EA;
-    font-family: 'Inter';
-    font-size: 1.8rem;
+  background: #dae0ea;
+  font-family: "Inter";
+  font-size: 1.8rem;
 }
 section {
-    background-color: #DAE0EA;
-    display: grid;
-    place-content: center;
-    
+  background-color: #dae0ea;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0 auto;
 }
 .wrapper {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 0 2.7rem;
+  padding-bottom: 1.5rem;
+  gap: 3rem;
+  width: 100%;
+  max-width: 650px;
+  margin: 0 auto;
+  position: relative;
+  z-index: 1;
+  flex: 1;
+}
+.wrapper::before {
+  position: absolute;
+  content: "";
+  height: 150px;
+  width: 150px;
+  background-color: #c7d0e0;
+  left: -50px;
+  top: 40px;
+  border-radius: 1rem;
+  z-index: -1;
+}
+.text-area {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 .text-area h2 {
-    font-weight: bold;
-    font-size: 4.5rem;
-    margin-top: 7.5rem;
-    margin-bottom: 3rem;
+  font-weight: bold;
+  font-size: 4.2rem;
+  margin-top: 7rem;
+  margin-bottom: 3rem;
 }
-.image-area{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+.text-area p {
+  font-size: 1.8rem;
+  margin-bottom: 5rem;
 }
-.image-area div {
-    width: 40%;
+a {
+  text-decoration: none;
+}
+.cta {
+  padding: 1.7rem;
+  width: 100%;
+  background-color: #1a63dd;
+  display: flex;
+  gap: 1.8rem;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 1.8rem;
+  justify-content: flex-start;
+  border-radius: 0.5rem;
+}
+.cta p {
+  margin: 0;
+}
+.image-area {
+  display: grid;
+  height: 100%;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 2rem;
+}
+.item {
+  background-size: cover;
+  border-radius: 1rem;
 }
 img {
+  width: 100%;
+  object-fit: cover;
+  height: 200px;
+  aspect-ratio: 1/1;
+  border-radius: 1rem;
+}
+div.item.three {
+  grid-column: 1/3;
+}
+@media screen and (min-width: 650px) {
+  div.item.one {
+    grid-row: 1/3;
+  }
+  div.item.one img {
+    height: 100%;
+  }
+  div.item.three {
+    grid-column: 2/3;
+  }
+}
+@media screen and (min-width: 950px) {
+  section {
+    height: 100dvh;
+  }
+  .cta {
+    margin-top: 6rem;
+  }
+  img {
+    height: 160px;
+  }
+  .wrapper {
+    flex-direction: row;
+    align-items: center;
     width: 100%;
+    max-width: 1200px;
+  }
+  .image-area {
+    flex: 1;
+  }
+  .text-area {
+    flex: 2;
+  }
 }
